# grantpilot

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
grantpilot/: __init__.py  agent.py  cli.py  profile.py
grantpilot/adapters/: __init__.py  awardsplatform.py  base.py  fluxx.py  submittable.py
grantpilot/ai/: __init__.py  form_filler.py
grantpilot/utils/: __init__.py  session.py
profiles/: example_profile.json
